--- a/services/app/src/index.html
+++ b/services/app/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" >
-    <title>A minimal React Webpack configuration</title>
+    <title>zknifty</title>
 </head>
 <body>
     <div class="container" id="app">
-        <h1>A minimal React Webpack configuration! Check out the console with F12</h1>
+        <h1>zknifty</h1>
     </div>
 </body>
 </html>
